<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Testing">

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="605dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Snímač 1" />

            <EditText
                android:id="@+id/Snimac_1_DBNumber"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:ems="10"
                android:hint="@string/db_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/Snimac_1_DBOffset"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:ems="10"
                android:hint="@string/db_offset"
                android:inputType="number" />

            <EditText
                android:id="@+id/Snimac_1_DBBit"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:ems="10"
                android:hint="@string/db_bit"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Snímač 2" />

            <EditText
                android:id="@+id/Snimac_2_DBNumber"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:ems="10"
                android:hint="@string/db_number"
                android:inputType="number"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/Snimac_2_DBOffset"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:ems="10"
                android:hint="@string/db_offset"
                android:inputType="number"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/Snimac_2_DBBit"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:ems="10"
                android:hint="@string/db_bit"
                android:inputType="number"
                tools:ignore="Autofill" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutButtonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical">

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/ulo_i"
                app:icon="@drawable/baseline_save_24"
                app:iconGravity="textStart" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>